--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,29 @@
-<form [formGroup]="loginForm">
-    <input type="text" id="usuario" formControlName="usuario">
-    <div *ngIf="this.loginForm.controls.usuario.errors?.required">El usuario es obligatorio!</div>
-    <div *ngIf="this.loginForm.controls.usuario.errors?.minlength">El usuario debe tener 4 caracteres al menos!</div>
+<div class="main-div">
+    <mat-card class="login-card">
+        <mat-card-header>
+            <mat-card-title>Iniciar sesión</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="assets/images/login.png" alt="Login image">
+        <mat-card-content>
 
-    <input type="password" id="password" formControlName="password">
-    <div *ngIf="!this.loginForm.controls.password.valid">La contraseña es obligatoria!</div>
+            <form [formGroup]="loginForm">
+                <mat-form-field appearance="outline">
+                    <mat-label>Usuario</mat-label>
+                    <input matInput placeholder="Nombre de usuario" formControlName="usuario">
+                </mat-form-field>
 
-    <button type="button" (click)="autenticaUsuario()">Autenticar</button>
-</form>
+                <mat-form-field appearance="outline">
+                    <mat-label>Contraseña</mat-label>
+                    <input matInput type="password" placeholder="Contraseña" formControlName="password">
+                    <button mat-icon-button matSuffix>
+                        <mat-icon>visibility_off</mat-icon>
+                    </button>
+                </mat-form-field>
+            </form>
+
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-raised-button color="primary" (click)="autenticaUsuario()">Acceder</button>
+        </mat-card-actions>
+    </mat-card>    
+</div>
