--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -12,3 +12,8 @@ mat-form-field {
     justify-content: center;
     align-items: center;
 }
+
+.errorEnValidacion {
+    margin-top: 10px;
+    color: #a87878;
+}
