--- a/src/app/components/barra-herramientas/barra-herramientas.component.html
+++ b/src/app/components/barra-herramientas/barra-herramientas.component.html
@@ -8,7 +8,7 @@
 
         <ng-container *ngIf="usuarioAutenticado != null">
             <button mat-button [matMenuTriggerFor]="menu" matTooltip="{{ usuarioAutenticado.nombre }}">
-                <mat-icon>account_circle</mat-icon>
+                <app-imagen-usuario [usuario]="usuarioAutenticado" [width]="50" [height]="50"></app-imagen-usuario>
             </button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="navegarHaciaDatosPersonales()">
