--- a/src/app/components/listado-mensajes/listado-mensajes.component.html
+++ b/src/app/components/listado-mensajes/listado-mensajes.component.html
@@ -1,6 +1,4 @@
-<p>Aquí viene el listado de mensajes</p>
-
-<table border="1">
+<table border="1" width="100%">
     <thead>
         <th>ID</th>
         <th>Asunto</th>
