--- a/src/app/components/listado-mensajes/listado-mensajes.component.html
+++ b/src/app/components/listado-mensajes/listado-mensajes.component.html
@@ -1,16 +1,23 @@
-<table border="1" width="100%">
-    <thead>
-        <th>ID</th>
-        <th>Asunto</th>
-        <th>Fecha</th>
-        <th>Cuerpo</th>
-    </thead>
-    <tbody>
-        <tr *ngFor="let mensaje of listaMensajes">
-            <td>{{ mensaje.id }}</td>
-            <td>{{ mensaje.asunto }}</td>
-            <td>{{ mensaje.fecha | date:'dd/MM/yyyy HH:mm' }}</td>
-            <td>{{ mensaje.cuerpo.substring(0, 30) + '...' }}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="contenedorTabla">
+    <table mat-table [dataSource]="dataSourceTabla" class="example-table" id="tablaMensajes">
+
+        <ng-container matColumnDef="De">
+            <th mat-header-cell *matHeaderCellDef>De</th>
+            <td mat-cell *matCellDef="let row">{{row.remitente.nombre}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Asunto">
+            <th mat-header-cell *matHeaderCellDef>Asunto</th>
+            <td mat-cell *matCellDef="let row">{{row.asunto}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Fecha">
+            <th mat-header-cell *matHeaderCellDef>Fecha</th>
+            <td mat-cell *matCellDef="let row">{{row.fecha | date:'dd/MM/yy HH:mm' }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="nombresDeColumnas"></tr>
+        <tr mat-row *matRowDef="let row; columns: nombresDeColumnas;" class="element-row {{row.leido ? '' : 'noLeido'}}"
+            (click)="seleccionarMensaje(row)"></tr>
+    </table>
+</div>
