--- a/src/app/components/listado-mensajes/listado-mensajes.component.html
+++ b/src/app/components/listado-mensajes/listado-mensajes.component.html
@@ -1,6 +1,33 @@
 <div class="contenedorTabla">
-    <table mat-table [dataSource]="dataSourceTabla" class="example-table" id="tablaMensajes">
 
+    <mat-tab-group (selectedTabChange)="cambioEnTiposDeMensajesVisualizados($event.index)" animationDuration="0ms">
+        <mat-tab>
+            <ng-template mat-tab-label>
+                <mat-icon class="tab-icon">inbox</mat-icon>
+                Recibidos
+            </ng-template>
+        </mat-tab>
+        <mat-tab>
+            <ng-template mat-tab-label>
+                <mat-icon class="tab-icon">send</mat-icon>
+                Enviados
+            </ng-template>
+        </mat-tab>
+        <mat-tab>
+            <ng-template mat-tab-label>
+                <mat-icon class="tab-icon">report</mat-icon>
+                Spam
+            </ng-template>
+        </mat-tab>
+        <mat-tab>
+            <ng-template mat-tab-label>
+                <mat-icon class="tab-icon">archive</mat-icon>
+                Archivados
+            </ng-template>
+        </mat-tab>
+    </mat-tab-group>
+
+    <table mat-table [dataSource]="dataSourceTabla" class="example-table" id="tablaMensajes">
         <ng-container matColumnDef="Select">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let row">
