--- a/src/app/components/listado-mensajes/listado-mensajes.component.html
+++ b/src/app/components/listado-mensajes/listado-mensajes.component.html
@@ -1,5 +1,12 @@
 <div class="contenedorTabla">
 
+    <mat-toolbar style="margin: 0px 10px;">
+        <span class="example-spacer"></span>
+        <mat-paginator [length]="listadoMensajes.totalMensajes" [pageIndex]="0" [pageSize]="10" [hidePageSize]="true"
+            [pageSizeOptions]="[5, 10, 25, 100]" (page)="actualizaListadoMensajes()" [showFirstLastButtons]="true">
+        </mat-paginator>
+    </mat-toolbar>
+
     <mat-tab-group (selectedTabChange)="cambioEnTiposDeMensajesVisualizados($event.index)" animationDuration="0ms">
         <mat-tab>
             <ng-template mat-tab-label>
@@ -57,5 +64,3 @@
             (click)="seleccionarMensaje(row)"></tr>
     </table>
 </div>
-
-<button mat-raised-button color="primary" (click)="verMensajesSeleccionados()">Ver Selección</button>
